Prefix Authorization header to all requests
