# lib/CloudServers.js
@@ -24,6 +24,7 @@ var CloudServers = (function() {
      * Find server by serverId
      * @method
      * @name CloudServers#getServerById
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - Id of server to be fetched
      * 
      */
@@ -40,6 +41,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -104,6 +114,7 @@ var CloudServers = (function() {
      * Update server details
      * @method
      * @name CloudServers#patchServer
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of server to be updated
      * @param {Server} body - Server data
      * 
@@ -121,6 +132,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -194,6 +214,7 @@ var CloudServers = (function() {
      * Create a new server
      * @method
      * @name CloudServers#addServer
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {ServerCreate} body - server details
      * 
      */
@@ -210,6 +231,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         if (parameters['body'] !== undefined) {
             body = parameters['body'];
@@ -276,6 +306,7 @@ var CloudServers = (function() {
      * Get a list of servers. By default, all destroyed servers are filtered out.
      * @method
      * @name CloudServers#getServerList
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} status - Server status filter (exact match)
      * @param {boolean} backupsEnabled - BackupsEnabled flag
      * @param {integer} limit - Number of results to display
@@ -295,6 +326,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         if (parameters['status'] !== undefined) {
             queryParameters['status'] = parameters['status'];
@@ -368,6 +408,7 @@ var CloudServers = (function() {
      * Destroy an existing server
      * @method
      * @name CloudServers#destroyServer
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - Id of server to be destroyed
      * 
      */
@@ -384,6 +425,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -448,6 +498,7 @@ var CloudServers = (function() {
      * Start a server
      * @method
      * @name CloudServers#startServer
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of server to be started
      * 
      */
@@ -464,6 +515,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -528,6 +588,7 @@ var CloudServers = (function() {
      * Stop a server
      * @method
      * @name CloudServers#stopServer
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of server to be stopped
      * 
      */
@@ -544,6 +605,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -608,6 +678,7 @@ var CloudServers = (function() {
      * Get a console URL to this server
      * @method
      * @name CloudServers#console
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - Server to access (serverId)
      * 
      */
@@ -624,6 +695,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -688,6 +768,7 @@ var CloudServers = (function() {
      * Find Addresses by serverId and addressId
      * @method
      * @name CloudServers#getServerAddressById
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of associated server
      * @param {string} addressId - Id of Address to be fetched
      * 
@@ -705,6 +786,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -776,6 +866,7 @@ var CloudServers = (function() {
      * List of Addresses of the specified server
      * @method
      * @name CloudServers#getServerAddressList
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of associated server
      * @param {string} address - Numeric address (exact match)
      * @param {string} status - Address status (exact match)
@@ -797,6 +888,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -881,6 +981,7 @@ var CloudServers = (function() {
      * Get ServerAction by id
      * @method
      * @name CloudServers#getServerActionById
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of associated server
      * @param {string} serverActionId - Id of ServerAction to be fetched
      * 
@@ -898,6 +999,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -969,6 +1079,7 @@ var CloudServers = (function() {
      * List of actions performed on the specified server
      * @method
      * @name CloudServers#getServerActionList
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of associated server
      * @param {string} type - Action type filter (exact match)
      * @param {integer} limit - Number of results to display
@@ -988,6 +1099,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -1064,6 +1184,7 @@ var CloudServers = (function() {
      * Find volume by serverId and volumeId
      * @method
      * @name CloudServers#getServerVolumeById
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId of associated server
      * @param {string} volumeId - Id of volume to be fetched
      * 
@@ -1081,6 +1202,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
@@ -1152,6 +1282,7 @@ var CloudServers = (function() {
      * Get a list of volumes for server
      * @method
      * @name CloudServers#getServerVolumeList
+     * @param {string} Authorization - Authorization header value in format 'sso-key <key>:<secret>'
      * @param {string} serverId - serverId filter
      * @param {string} zoneId - zoneId filter
      * @param {string} status - Volume status (exact match)
@@ -1173,6 +1304,15 @@ var CloudServers = (function() {
         var queryParameters = {};
         var headers = {};
         var form = {};
+
+        if (parameters['Authorization'] !== undefined) {
+            headers['Authorization'] = parameters['Authorization'];
+        }
+
+        if (parameters['Authorization'] === undefined) {
+            deferred.reject(new Error('Missing required header parameter: Authorization'));
+            return deferred.promise;
+        }
 
         path = path.replace('{serverId}', parameters['serverId']);
 
